--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,22 @@
-sudo: required
 language: android
-dist: precise
-jdk: oraclejdk8
 env:
   global:
-    - ANDROID_TARGET=android-21
-    - ANDROID_ABI=armeabi-v7a
-    - ADB_INSTALL_TIMEOUT=8
+    - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 android:
   components:
-  - tools
-  - platform-tools
-  - build-tools-25.0.1
-  - android-25
-  - extra-android-m2repository
-  - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
+    - tools
+    - platform-tools
+    - build-tools-28.0.2
+    - android-26
+    - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-21
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 script:
   - ./gradlew build jacocoTestReport assembleDevelopDebugAndroidTest
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI --skin WXGA720
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a --skin WXGA720
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell settings put global window_animation_scale 0.0
@@ -26,6 +25,15 @@ script:
   - adb shell settings put secure show_ime_with_hard_keyboard 0
   - adb shell am broadcast -a com.android.intent.action.SET_LOCALE --es com.android.intent.extra.LOCALE EN
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+  - adb shell input keyevent 82 &
   - travis_wait 30 ./gradlew connectedDevelopDebugAndroidTest createDevelopDebugAndroidTestCoverageReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
