Replaced AlarmsService with AlarmsReceiver

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.melnykov:floatingactionbutton:1.2.0'
     androidTestImplementation 'com.android.support:support-v4:26.1.0'
     androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.2.1'
-    annotationProcessor "org.immutables:value:2.4.3" // <-- for annotation processor
-    compileOnly "org.immutables:value:2.4.3" // <-- for annotation API
+    annotationProcessor "org.immutables:value:2.4.3"
+    compileOnly "org.immutables:value:2.4.3"
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:2.23.4"
 }
