--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,11 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.2.1'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3"
   }
 }
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 26
@@ -49,6 +51,8 @@ repositories {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.3"
+
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.guava:guava:15.0'
     implementation 'ch.acra:acra:4.6.1'
