--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.2.1'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.51"
   }
 }
 apply plugin: 'com.android.application'
@@ -51,8 +51,10 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.3"
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.2.51"
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.guava:guava:15.0'
     implementation 'ch.acra:acra:4.6.1'
